<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailsActivity"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgViewCocktailDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:alpha="0.2"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="250dp">

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/detail_shape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvTitleNameDetail"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/roboto_black"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/txtNameDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvNameDetail"
                            android:textSize="16sp"
                            android:maxLength="255"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto_condensed_italic"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#66B43C4E"
                            android:layout_marginTop="20dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvTitleIngredientsDetail"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/roboto_black"
                            android:textAlignment="center"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvListIngredients"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"/>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#66B43C4E"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvTitleInstructionsDetail"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/roboto_black"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/txtInstructionsDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvInstructionsDetail"
                            android:textSize="16sp"
                            android:maxLength="255"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto_condensed_italic"/>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </RelativeLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>