<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/baseline_arrow_back"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app"
                android:textColor="@color/tan_hide"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_new_info"
                android:layout_marginEnd="15dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/etSearchByName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/input_search"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:textColor="#000000"
                android:hint="@string/txtSearchByName"
                android:paddingLeft="10dp"
                android:inputType="text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearchByName"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_search"
                android:text="@string/btnSearchByName"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSelectCocktails"
                    android:textSize="19sp"
                    android:textColor="#2B2B2B"
                    android:fontFamily="@font/la_bande_en_baskets"
                    android:layout_gravity="left"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical"
                android:gravity="right|center_vertical">


                <Spinner
                    android:id="@+id/spinnerFilterLetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/btn_search"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListCocktails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>